# bsdr

./: .env.example  Cargo.toml  Makefile
docker/: docker-compose.yml
docs/: ABOUT_DB_KEEP_ALIVE.md  ABOUT_DB_KEEP_ALIVE_2.md  CREATE_USR_GO.md  CRUD_FOR_USRS_GO.md  DB_MODEL_GO.md  HIRE_DEHIRE_USR_GO.md  PROGRESS-01.md  PROGRESS-02.md  PROGRESS-03.md  REST_API_DEV_STRICT_RULES.md  S3CLIENT.md  SEA_ORM_RAW_SQL_SETTINGS.md  VALIDATIONS.md
src/: lib.rs  main.rs
src/config/: mod.rs  settings.rs
src/entities/: badges.rs  bds.rs  belongs.rs  cryptos.rs  flushes.rs  jobs.rs  match_statuses.rs  matches.rs  mod.rs  payments.rs  payouts.rs  points.rs  pools.rs  prelude.rs  usr_badges.rs  usrs.rs  works.rs
src/enums/: mod.rs  mode.rs  usrtype.rs
src/migration/: m20260104_092035_create_bd_tbl.rs  m20260104_092136_create_usr_tbl.rs  m20260107_050440_create_badges_tbl.rs  m20260107_050440_create_belongs_tbl.rs  m20260107_050440_create_cryptos_tbl.rs  m20260107_050440_create_flushes_tbl.rs  m20260107_050440_create_jobs_tbl.rs  m20260107_050440_create_match_statuses_tbl.rs  m20260107_050440_create_matches_tbl.rs  m20260107_050440_create_payments_tbl.rs  m20260107_050440_create_payouts_tbl.rs  m20260107_050440_create_points_tbl.rs  m20260107_050440_create_pools_tbl.rs  m20260107_050440_create_usr_badges_tbl.rs  m20260107_050440_create_works_tbl.rs  mod.rs
src/mode/: mod.rs
src/mode/am/: main_of_am.rs  mod.rs
src/mode/rt/: main_of_rt.rs  mod.rs  (+1 more)
src/utils/: bd.rs  cors.rs  crypto.rs  db.rs  env.rs  init.rs  jwt.rs  mod.rs  s3client.rs
src/vo/: mod.rs  usrs_vo.rs
(+22 files in other folders)
