[package]
name = "bsdr"
version = "0.0.2"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.54", features = ["derive"] }
dotenvy = "0.15.7"
fern = "0.7.1"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
