[package]
name = "bsdr"
version = "0.0.5"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
aws-config = "1.8.12"
aws-credential-types = "1.2.11"
aws-sdk-s3 = { version = "1.119.0", features = ["rt-tokio"] }
aws-smithy-runtime-api = "1.9.3"
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.54", features = ["derive"] }
dotenvy = "0.15.7"
fern = "0.7.1"
futures = "0.3.31"
log = "0.4.29"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
walkdir = "2.5.0"
async-trait = "0.1.89"
sea-orm = { version = "1.1.19", features = [
    "debug-print",
    "runtime-tokio-rustls",
    "sqlx-mysql",
] }
sea-orm-migration = "1.1.19"
bcrypt = "0.17.1"
rust_decimal = "1.39.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
